--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script type="module" src="./el-one.js"></script>
+  <script type="module" src="./el-two.js"></script>
 </head>
 <body>
 
   <element-one></element-one>
-  <element-one></element-one>
-  <element-one></element-one>
+  <element-two></element-two>
   
 </body>
 </html>
