--- a/demo/index.html
+++ b/demo/index.html
@@ -9,16 +9,11 @@
 </head>
 <body>
 
-  <demo-element id="demo"></demo-element>
-  <demo-element></demo-element>
-  <demo-element></demo-element>
-  <demo-element></demo-element>
+  <h1>Demo Files</h1>
+  <ul>
+    <li><a href="single-name.html">Single Name</a></li>
+    <li><a href="users.html">List of Users</a></li>
+  </ul>
 
-  <input id="input" placeholder="Type in a name...">
-
-  <script>
-    input.addEventListener('input', e => demo.name = e.target.value);
-  </script>
-  
 </body>
 </html>
